--- a/src/Overview/Overview.css
+++ b/src/Overview/Overview.css
@@ -18,7 +18,7 @@
     padding: 2rem;
 }
 .OverviewPrice {
-    padding:10px;
+    padding: 10px 15px;
     border-top: 1px solid #ddd;
 }
 
